# Algorithm-Engineering

./: README.md  try.txt
Paper/: Report von Threshmethods für image-Binaization.docx
anwers/Vorlesung_1/: Coding Warmup on Slide 19.docx  Report and discuss.docx  andere_Methode.cpp  pi  pi2  pi2.cpp  pi_numerical_integration.cpp
anwers/Vorlesung_10/: Discuss Donald Knuth’s original quote.md  report on GDB.md
anwers/Vorlesung_11/: discuss on Blocks in SSD.md  report on SSD-Friendly design.md
anwers/Vorlesung_12/: report on Memory-Mapped Files.md  report on NUMA.md  report on library Highway.md
anwers/Vorlesung_2/: Rewrite_pi.cpp  race_condition_rewrite.cpp
anwers/Vorlesung_2/Codewormup/: Codewormup.docx  race_condition_original.cpp  race_condition_rewrite.cpp  reducetime.cpp
anwers/Vorlesung_3/: Report.docx  parellelized_meonte_carlo  parellelized_meonte_carlo.cpp  pi_monte_carlo  pi_monte_carlo.cpp
anwers/Vorlesung_4/: Discuss  Discuss.md  codewarmup_1  codewarmup_1.cpp  single  slow
anwers/Vorlesung_4/Benchmark/: Visualisierung.py  array_speedup.csv  env_info.txt  min_max_quicksort.cpp  print_env.sh  quicksort  threads_speedup.csv
anwers/Vorlesung_4/coding_warmup/: merge_single_omp.cpp  single_omp
anwers/Vorlesung_5/: Readme.md
anwers/Vorlesung_5/executable/: CMakeLists.txt  main.cpp
anwers/Vorlesung_5/quantpng/: CMakeLists.txt
anwers/Vorlesung_5/quantpng/lodepng/: CMakeLists.txt
anwers/Vorlesung_5/quantpng/quantize/: CMakeLists.txt
anwers/Vorlesung_5/test_with_catch2/: CMakeLists.txt
anwers/Vorlesung_5/test_with_catch2/catch/: CMakeLists.txt  catch_tests_fizzbuzz.cpp
anwers/Vorlesung_5/test_with_catch2/fizzbuzz/: CMakeLists.txt
anwers/Vorlesung_5/test_with_catch2/fizzbuzz/include/: fizzbuzz.h
anwers/Vorlesung_5/test_with_catch2/fizzbuzz/src/: fizzbuzz.cpp
anwers/Vorlesung_6/: Advantages of Unit Stride.md  Impact of Memory Aliasing on Performance.md  Preference for Structure of Arrays.md  characteristics of the instructions sets.md
anwers/Vorlesung_7/: Vectorization Clauses.md  discuss about MMX.md  similar graphic for AVX512 data types.md
anwers/Vorlesung_8/: report on AVX2.docx
anwers/Vorlesung_9/: Answers of the questions.docx  Answers oft the questions.md  discuss about cache optimization.md  report on cache miss.md
project/AdaptiveIntegralThresholding-binarization/: CMakeLists.txt  README.md  ThresholdApp  ThresholdMethods.cpp  ThresholdMethods.h
project/AdaptiveIntegralThresholding-binarization/Ergebniss/: ThresholdApp
project/AdaptiveIntegralThresholding-binarization/Unit_Test/: CMakeLists.txt  Readme.md  ThresholdMethods.cpp  ThresholdMethods.h  main.cpp  test_ThresholdMethods.cpp
project/AdaptiveIntegralThresholding-master/: CMakeLists.txt  ThresholdMethods.cpp  main.cpp
